# comprasnet-extracao-lances-sp-rj

./: .gitignore  Cargo.toml  README.md  comprasnet_extracao_lances.ipynb  comprasnet_extracao_lances_pandas.ipynb  comprasnet_extracao_lances_polars.ipynb  comprasnet_extracao_lances_rust.ipynb
dados/: tbl_lances_header.csv
